--- a/app/index.html
+++ b/app/index.html
@@ -64,22 +64,22 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="heading">about</div>
-              <p>
+              <p class="descriptions">
                 No matter the platform or language, I like to build software (dreams of hardware, too). I am interested in and passionate about solving problems with all things technical.
               </p>
-              <p>I am currently a software developer for an <a class="link" href="https://www.virtualjobshadow.com">awesome education software company</a> in Asheville, NC, developing full-stack features, from browser to database. I live outside Brevard,
+              <p class="descriptions">I am currently a software developer for an <a class="link" href="https://www.virtualjobshadow.com">awesome education software company</a> in Asheville, NC, developing full-stack features, from browser to database. I live outside Brevard,
                 NC with my wife, four sons, and one daughter. We love to garden, hike and catch salamanders.</p>
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12">
               <div class="heading">current interests</div>
-              <p>
+              <p class="descriptions">
                 These are my favorite things I am presently learning or actively making an effort to include in projects/work:
               </p>
               <div class="row">
                 <div class="col-xs-6">
-                  <ul>
+                  <ul class="interests">
                     <li>flexbox</li>
                     <li>machine learning</li>
                     <li>swift</li>
@@ -87,7 +87,7 @@
                   </ul>
                 </div>
                 <div class="col-xs-6">
-                  <ul>
+                  <ul class="interests">
                     <li>ARKit</li>
                     <li>ReactVR</li>
                     <li>arduino</li>
@@ -143,7 +143,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="heading">contact</div>
-              <p>
+              <p class="descriptions">
                 Feel free to contact me for whatever! <br>
                 <a class="link" href="mailto:graysonhicks@gmail.com">graysonhicks@gmail.com</a> <br>
                 <a class="link" href="tel:8039171953">(803) 917-1953</a>
