--- a/app/index.html
+++ b/app/index.html
@@ -43,24 +43,24 @@
           <li class="social-list-items"><a target="_blank" href="https://twitter.com/graysonhicks">twitter</a></li>
         </ul>
       </div>
-        <div class="col-md-10">
-          <div id="blog-content">
-            <div id="loading-spinner" class="heading">
-               <div class="letter-holder">
-                    <div class="l-1 letter">L</div>
-                    <div class="l-2 letter">o</div>
-                    <div class="l-3 letter">a</div>
-                    <div class="l-4 letter">d</div>
-                    <div class="l-5 letter">i</div>
-                    <div class="l-6 letter">n</div>
-                    <div class="l-7 letter">g</div>
-                    <div class="l-8 letter">.</div>
-                    <div class="l-9 letter">.</div>
-                    <div class="l-10 letter">.</div>
-                </div>
+      <div class="col-md-10">
+        <div id="blog-content">
+          <div id="loading-spinner" class="heading">
+            <div class="letter-holder">
+              <div class="l-1 letter">L</div>
+              <div class="l-2 letter">o</div>
+              <div class="l-3 letter">a</div>
+              <div class="l-4 letter">d</div>
+              <div class="l-5 letter">i</div>
+              <div class="l-6 letter">n</div>
+              <div class="l-7 letter">g</div>
+              <div class="l-8 letter">.</div>
+              <div class="l-9 letter">.</div>
+              <div class="l-10 letter">.</div>
             </div>
           </div>
-          <div id="main-content">
+        </div>
+        <div id="main-content">
           <div class="row">
             <div class="col-xs-12">
               <div class="heading">about</div>
@@ -100,51 +100,56 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="heading">projects / work</div>
-              <a class="project-item" href="https://www.virtualjobshadow.com" target="_blank">
-                <div class="col-xs-12 project-description">
+              <a class="project-item row" href="https://www.virtualjobshadow.com" target="_blank">
+                <div class="col-sm-3 project-image">
+                  <img class="img-responsive" src="images/vjsthumb.png" alt="">
+                </div>
+                <div class="col-sm-12 project-description">
                   <div class="project-heading">virtualjobshadow.com (2016 - present)</div>
                   <div class="project-description">On a small development team for a thriving ed-tech SaaS. Responsible for full feature builds, from the browser to the database and covered with tests. A handrolled JS front-end framework, effective libraries when needed, PHP on the backend,
                     and SQL for the database.</div>
                 </div>
-                <div class="col-xs-3 project-image">
-                  <img class="img-responsive" src="images/vjsthumb.png" alt="">
-                </div>
+
               </a>
-              <a class="project-item" href="http://www.parkary.com" target="_blank">
-                <div class="col-xs-12 project-description">
+              <a class="project-item row" href="http://www.parkary.com" target="_blank">
+                <div class="col-sm-3 project-image">
+                  <img class="img-responsive" src="images/parkarythumb.png" alt="">
+                </div>
+                <div class="col-sm-12 project-description">
                   <div class="project-heading">parkary.com</div>
                   <div class="project-description">A platform for exploring and rating city parks across the country. Built with React, Backbone, Parse and Heroku</div>
                 </div>
-                <div class="col-xs-3 project-image">
-                  <img class="img-responsive" src="images/parkarythumb.png" alt="">
-                </div>
+
               </a>
-              <a class="project-item" href="https://graysonhicks.github.io/vrWorkplace/" target="_blank">
-                <div class="col-xs-12 project-description">
+              <a class="project-item row" href="https://graysonhicks.github.io/vrWorkplace/" target="_blank">
+                <div class="col-sm-3 project-image">
+                  <img class="img-responsive" src="images/vrworkplacethumb.jpg" alt="">
+                </div>
+                <div class="col-sm-12 project-description">
                   <div class="project-heading">vrWorkplace</div>
                   <div class="project-description">A ReactVR project allowing the user to choose a workplace, enter a 360 view of the workplace, and select an view 'hotpoints' related to that career.</div>
                 </div>
-                <div class="col-xs-3 project-image">
-                  <img class="img-responsive" src="images/vrworkplacethumb.jpg" alt="">
-                </div>
+
               </a>
-              <a class="project-item" href="https://graysonhicks.github.io/pallypal/" target="_blank">
-                <div class="col-xs-12 project-description">
+              <a class="project-item row" href="https://graysonhicks.github.io/pallypal/" target="_blank">
+                <div class="col-sm-3 project-image">
+                  <img class="img-responsive" src="images/pallypal.jpg" alt="">
+                </div>
+                <div class="col-sm-12 project-description">
                   <div class="project-heading">pallypal</div>
                   <div class="project-description">Web based canvas tool to create color palettes that export stylesheet files with semantically named color variables. Built using JS, with a node.js/express server on heroku. Also offered as an npm package.</div>
                 </div>
-                <div class="col-xs-3 project-image">
-                  <img class="img-responsive" src="images/pallypal.jpg" alt="">
-                </div>
+
               </a>
-              <a class="project-item" href="https://graysonhicks.github.io/sanctum-ipsum/" target="_blank">
-                <div class="col-xs-12 project-description">
+              <a class="project-item row" href="https://graysonhicks.github.io/sanctum-ipsum/" target="_blank">
+                <div class="col-sm-3 project-image">
+                  <img class="img-responsive" src="images/sanctumthumb.png" alt="">
+                </div>
+                <div class="col-sm-12 project-description">
                   <div class="project-heading">sanctum ipsum</div>
                   <div class="project-description">A site based Catholic lorem ipsum generate made with React. Also offers a node.js based API for use within projects.</div>
                 </div>
-                <div class="col-xs-3 project-image">
-                  <img class="img-responsive" src="images/sanctumthumb.png" alt="">
-                </div>
+
               </a>
 
             </div>
