--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,28 @@
   <meta name="msvalidate.01" content="3A0C9741DD9DFE5995F843F1A416CFC9" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="grayson hicks, web developer, react, front end, full stack, remote, asheville, javascript">
-  <meta name="description" content="Modern web development by Grayson Hicks. Chasing the edge with React, VR, AR, iOS">
+  <meta name="description" content="Modern web development by Grayson Hicks. Exploring front-end, AR, VR, iOS, anything.">
+
+  <meta property="og:site_name" content="graysonhicks.com">
+  <meta property="og:title" content="Grayson Hicks | Software Developer">
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Modern web development projects and blog by Grayson Hicks. Exploring anything software or hardware.">
+  <meta property="og:image" content="https://s3.amazonaws.com/graysonhicks.com/images/carolina.jpg">
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="3264">
+  <meta property="og:image:height" content="2446">
+  <meta property="og:url" content="http://www.graysonhicks.com">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:title" content="Grayson Hicks | Software Developer">
+  <meta property="twitter:description" content="Modern web development projects and blog by Grayson Hicks. Exploring anything software or hardware.">
+  <meta property="twitter:site" content="@graysonhicks">
+  <meta property="twitter:creator" content="@graysonhicks">
+  <meta property="twitter:url" content="http://www.graysonhicks.com">
+
+  <meta property="twitter:image:src" content="/https://s3.amazonaws.com/graysonhicks.com/images/carolina.jpg">
+
+
   <title>Grayson Hicks | Software Developer</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Lato:700" rel="stylesheet">
   <link rel="stylesheet" href="styles/app.css">
